--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,4 @@
 {
-    "python.pythonPath": "C:\\ProgramData\\Anaconda3\\envs\\oaweb\\python.exe"
+    "python.pythonPath": "C:\\ProgramData\\Anaconda3\\envs\\oaweb\\python.exe",
+    "terminal.integrated.scrollback": 100000
 }
