--- a/requirements.txt
+++ b/requirements.txt
@@ -2,19 +2,27 @@ attrs==19.3.0
 Automat==0.8.0
 beautifulsoup4==4.8.1
 bs4==0.0.1
+cachetools==3.1.1
 certifi==2019.9.11
 cffi==1.13.2
 chardet==3.0.4
+comtypes==1.1.7
 constantly==15.1.0
 cryptography==2.8
 cssselect==1.1.0
 Django==2.2.6
+google-api-python-client==1.7.11
+google-auth==1.7.2
+google-auth-httplib2==0.0.3
+google-auth-oauthlib==0.4.1
 gunicorn==19.9.0
+httplib2==0.14.0
 hyperlink==19.0.0
 idna==2.8
 incremental==17.5.0
 lxml==4.4.1
 numpy==1.17.3
+oauthlib==3.1.0
 pandas==0.25.3
 parsel==1.5.2
 Protego==0.1.15
@@ -27,8 +35,12 @@ pynput==1.4.5
 pyOpenSSL==19.1.0
 python-dateutil==2.8.0
 pytz==2019.3
+pywin32==227
+pywinauto==0.6.8
 queuelib==1.5.0
 requests==2.22.0
+requests-oauthlib==1.3.0
+rsa==4.0
 Scrapy==1.8.0
 selenium==3.141.0
 service-identity==18.1.0
@@ -36,6 +48,7 @@ six==1.12.0
 soupsieve==1.9.4
 sqlparse==0.3.0
 Twisted==19.10.0
+uritemplate==3.0.0
 urllib3==1.25.6
 w3lib==1.21.0
 wincertstore==0.2
